--- a/static/css/animations.css
+++ b/static/css/animations.css
@@ -5,3 +5,14 @@
 .anim-pulse {
   -webkit-animation: pulse 2s infinite;
 }
+
+@-webkit-keyframes unlock {
+  20% { -webkit-transform: rotatez(90deg) translatey(-5px); }
+  30% { -webkit-transform: rotatez(90deg) rotatey(40deg) translatey(-5px); }
+  50% { -webkit-transform: rotatez(90deg) translatey(-5px); }
+  60% { -webkit-transform: rotatez(90deg) rotatey(40deg) translatey(-5px); }
+  80% { -webkit-transform: rotatez(90deg) translatey(-5px); }
+}
+.anim-unlock {
+  -webkit-animation: unlock 2s infinite;
+}
