--- a/static/css/icons.css
+++ b/static/css/icons.css
@@ -1,21 +1,25 @@
 /* Source of unicodes: http://copypastecharacter.com/ */
 [class*="icon-"] {
     display: inline-block;
+    width: 20px;
+    height: 20px;
 }
 
 .icon-sun {
     color: #ffad00;
-    width: 20px;
-    height: 20px;
 }
 .icon-sun:after {
     content: '\2600';
 }
+.icon-rain {
+    color: #222;
+}
+.icon-rain:after {
+    content: '\2614';
+}
 .icon-key {
     color: #222;
-    width: 20px;
-    height: 20px;
-    -webkit-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg) translatex(4px);
 }
 .icon-key:after {
     content: '\26B7';
