--- a/static/css/animations.css
+++ b/static/css/animations.css
@@ -23,3 +23,21 @@
 .anim-unlock {
   -webkit-animation: unlock 4s infinite;
 }
+
+@-webkit-keyframes bounceOutRight {
+  0% {
+    -webkit-transform: translateX(0);
+  }
+  20% {
+    opacity: 1;
+    -webkit-transform: translateX(-20px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(2000px);
+  }
+}
+
+.bounceOutRight {
+  -webkit-animation: bounceOutRight 500ms;
+}
