--- a/static/css/animations.css
+++ b/static/css/animations.css
@@ -2,8 +2,12 @@
 @-webkit-keyframes pulse {
   50% { -webkit-transform: scale(1.2) rotate(10deg); }
 }
+@-moz-keyframes pulse {
+  50% { -moz-transform: scale(1.2) rotate(10deg); }
+}
 .anim-pulse {
   -webkit-animation: pulse 3s infinite;
+     -moz-animation: pulse 3s infinite;
 }
 
 @-webkit-keyframes shake {
@@ -12,16 +16,28 @@
   40%, 60%, 80% {-webkit-transform: scale(1.1) rotate(-3deg);}
   100% {-webkit-transform: scale(1) rotate(0);}
 }
+@-moz-keyframes shake {
+  10%, 20% {-moz-transform: scale(0.9) rotate(-3deg);}
+  30%, 50%, 70%, 90% {-moz-transform: scale(1.1) rotate(3deg);}
+  40%, 60%, 80% {-moz-transform: scale(1.1) rotate(-3deg);}
+  100% {-moz-transform: scale(1) rotate(0);}
+}
 .anim-shake {
   -webkit-animation: shake 2s infinite;
+     -moz-animation: shake 2s infinite;
 }
 
 @-webkit-keyframes unlock {
   20%,50%,80% { -webkit-transform: rotatez(90deg) translatey(-5px) translatex(4px); }
   30%,60% { -webkit-transform: rotatez(90deg) rotatey(40deg) translatey(-5px) translatex(4px); }
 }
+@-moz-keyframes unlock {
+  20%,50%,80% { -moz-transform: rotatez(90deg) translatey(-5px) translatex(4px); }
+  30%,60% { -moz-transform: rotatez(90deg) rotatey(40deg) translatey(-5px) translatex(4px); }
+}
 .anim-unlock {
   -webkit-animation: unlock 4s infinite;
+     -moz-animation: unlock 4s infinite;
 }
 
 @-webkit-keyframes bounceOutRight {
@@ -37,7 +53,20 @@
     -webkit-transform: translateX(2000px);
   }
 }
-
+@-moz-keyframes bounceOutRight {
+  0% {
+    -moz-transform: translateX(0);
+  }
+  20% {
+    opacity: 1;
+    -moz-transform: translateX(-20px);
+  }
+  100% {
+    opacity: 0;
+    -moz-transform: translateX(2000px);
+  }
+}
 .bounceOutRight {
   -webkit-animation: bounceOutRight 500ms;
+     -moz-animation: bounceOutRight 500ms;
 }
