--- a/static/css/animations.css
+++ b/static/css/animations.css
@@ -66,7 +66,7 @@
     -moz-transform: translateX(2000px);
   }
 }
-.bounceOutRight {
+.anim-bounceOutRight {
   -webkit-animation: bounceOutRight 500ms;
      -moz-animation: bounceOutRight 500ms;
 }
