List configs. Various style changes.

--- a/static/css/apps.css
+++ b/static/css/apps.css
@@ -68,6 +68,7 @@
 
     color: #fff;
     background: #222;
+    min-height: 127px;
 }
 .tabs .tab [type="radio"]:checked + label {
     border-bottom-width: 0;
