--- a/static/css/common.css
+++ b/static/css/common.css
@@ -29,8 +29,17 @@ textarea {
             box-sizing: border-box;
 }
 
-/** Lists and tables **/
-.list-group {
+/** Lists **/
+ul {
     list-style: none;
     padding: 0;
+}
+li {
+    padding: 0.8rem 8px;
+}
+
+@media (max-width: 640px) {
+    ul {
+        margin: 16px -8px;
+    }
 }
